fix(sdk-java): Remove references to methods that don't exist in Java 11